partial fix for i2ptunnel nonce troubles
Monotone-Parent: 5e0706e229ecfc39a5f08a98587cd21f78869576
Monotone-Revision: 6cf70779bcd05bcf782d6d7bb8d131ce8d71426f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-13T20:33:48
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-03-013 zzz
+    * Partial fix for i2ptunnel nonce troubles
+
 2010-03-08 zzz
     * Floodfills: Increase max to 60 (was 28) and min to 45 (was 20)
     * i2psnark: Better track outgoing bandwidth by incrementing
