--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,18 @@
+2010-03-25 zzz
+    * configclients.jsp: Fix dup anchor
+    * Console: Sort plugin links in summary bar
+    * i2psnark:
+      - Send numwant=0 if we don't need peers
+      - Report returned complete and incomplete counts
+        if higher than peer count
+      - Allow missing peer list
+      - Log tweaks
+    * netdb.jsp: Tag transport properties
+    * Plugins: Remove final check and install console
+      messages after a while
+    * PrivateKeyFile: Add b32 output
+    * Reseed: Add another host
+
 2010-03-18 zzz
     * Blocklist, CommSystem, FIFOBandwidth, TransportManager,
       OutNetMessage, InNetMessagePool:
@@ -47,6 +62,10 @@
       - Take incoming messages from the head of the queue,
         not sure why taking them from the tail "reduces latency"
       - Java 5 cleanup
+
+2010-03-17 zzz
+    * I2PTunnel: Disable nonce checking when console password set
+    * Reseed: Add another host
 
 * 2010-03-15  0.7.12 released
 
