* configclients.jsp:       - Always show start button for webapps and plugins     * configclients.jsp, configupdate.jsp:       - Fix submission when entering CR in a text box     * Plugins:       - Stop all plugins at shutdown       - Log tweaks     * WebApps:       - Remove the WAC after stopping it       - Stop a WAC before starting it to prevent dups
Monotone-Parent: 1d8566b3fc72c95e412b9995ef6f238bf9617ac0
Monotone-Revision: 7f118ddf81f8825ad82c1efaccccc315107a03a6

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-29T21:20:48
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,19 @@
+2010-03-29 zzz
+    * configclients.jsp:
+      - Always show start button for webapps and plugins
+    * configclients.jsp, configupdate.jsp:
+      - Fix submission when entering CR in a text box
+    * EepGet: Don't retry after a MalformedURLException
+    * HTTPResponseOutputStream: More static
+    * Plugins:
+      - Stop all plugins at shutdown
+      - Log tweaks
+    * WebApps:
+      - Remove the WAC after stopping it
+      - Stop a WAC before starting it to prevent dups
+      - Implement destroy() in addressbook to prevent dups
+      - Implement destroy() in i2psnark to prevent dups
+
 2010-03-25 zzz
     * configclients.jsp: Fix dup anchor
     * Console: Sort plugin links in summary bar
