turned the knob the wrong way before
Monotone-Parent: 9939d83fd74504a3aeaf4097a8d3a6eaa449bf63
Monotone-Revision: 6cd2f8bb60720e3aeeb500d67b3f162f2831c3fa

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-02T13:10:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-04-02 zzz
+    * FloodfillPeerSelector: Adjust rankings again
+
 2010-03-31 zzz
     * FloodfillPeerSelector: Adjust rankings to try to
       improve LeaseSet lookups
