* Console:       - More HTML transitional fixes       - Standardize on 'save' to the right of 'cancel'
Monotone-Parent: 2504ed879d2de93186009ce7cefa470719e20c15
Monotone-Revision: a048488869d0f843f93e37385e14be582f69896d

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-05T13:34:45
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2010-04-05 zzz
+    * Console:
+      - Add tooltip support for plugin links
+      - Make target=_blank for plugin links
+      - More HTML transitional fixes
+      - Standardize on 'save' to the right of 'cancel'
+
 2010-04-02 zzz
     * FloodfillPeerSelector: Adjust rankings again
 
