Streaming: Fix the window size increment logic so it does it much more often. The code increased the window size by MSS * MSS / N, like in RFC 2581, but it did it only once every N, so that was like MSS * MSS / N**2. Now do it all the time, except for isolated packets like keepalives that aren't using more than one message of the window. Seems to speed up outbound significantly, without any noticable increase in stream.sendsBeforeAck.
Monotone-Parent: ffe8284a3338476aed9117638a1858710d8a83e4
Monotone-Revision: b5a86744c2877d9d738a2fdd2b99970a0160e062

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-10T15:42:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,16 @@
+2010-04-10 zzz
+    * i2psnark:
+      - Disconnect seeds that connect to a seed
+      - Lower per-torrent conn limits for large pieces
+    * Startup:
+      - Don't die horribly if there is a router.info file
+        but no router.keys file
+        http://forum.i2p/viewtopic.php?t=4424
+      - Log tweaks
+    * Streaming:
+      - Fix the window size increment logic so it
+        does it much more often
+
 2010-04-08 zzz
     * Key Manager: Hopefully avoid some races at startup
       http://forum.i2p/viewtopic.php?t=4424
