--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2010-04-12 zzz
+    * configstats.jsp: Fix full stats checkbox default
+    * i2psnark:
+      - Concurrent, limit, display, log tweaks
+    * i2ptunnel: Implement access lists for TCP servers.
+      Enter b32 or b64 hash or dest into list box, and
+      check enable for whitelist. Uncheck enable and enter
+      i2cp.enableBlackList=true in advanced i2cp options for
+      blacklist. Todo: make black/whitelists radio buttons.
+    * LogManager: Concurrent
+
 2010-04-10 zzz
     * i2psnark:
       - Disconnect seeds that connect to a seed
