I2PTunnelHTTPClient: Test for "http://:/" and output error page. This avoids an ArrayIndexOutOfBoundsException, which can eventually cause the eepproxy to stop functioning.
Monotone-Parent: 2c845f47f9323817088f27c61390558ad723b84a
Monotone-Revision: 535e7d7326c90d3d732fb3b02cea7beb4972bed3

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-04-15T06:38:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2010-04-15 sponge
+    * I2PTunnelHTTPClient: Test for "http://:/" and output error page.
+      This avoids an ArrayIndexOutOfBoundsException, which can eventually
+      cause the eepproxy to stop functioning.
+
 2010-04-12 zzz
     * configstats.jsp: Fix full stats checkbox default
     * i2psnark:
