* BOB early session destroy to speed up tunnel tare-down.
Monotone-Parent: 419ed0e190da60ce3f53f77c4302f1f4ba1c0ad4
Monotone-Revision: 0f0daa4ba90cc11818a0e309b3ca5130a3d6a1da

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-04-16T19:38:40
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-04-16 sponge
+    * BOB early session destroy to speed up tunnel tare-down.
+
 2010-04-15 zzz
     * DataHelper: Limit max length in readline()
     * Floodfills: Increase max to 100 (was 60) and min to 60 (was 45)
