reduce floodfill max conns slightly; fix clients start button
Monotone-Parent: 306ad6d93001a37d945de38b9f12ec19bb820697
Monotone-Revision: 97d1920fe72239b114850582ac0fc6b6e665858a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-18T23:06:04
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-04-18 zzz
+    * configclients.jsp: Start button logic for clients was inverted
+    * Console: IRC links in readmes and initialNews
+    * I2PTunnelServer: Debug log incoming conns
+    * Transport: Reduce floodfill max NTCP conns to 425 (was 500)
+
 2010-04-16 sponge
     * BOB early session destroy to speed up tunnel tare-down.
 
