log compress errors
Monotone-Parent: 1330209b20894cf53b9f0f8a1e1d52e39a095639
Monotone-Revision: 660e3e1f77715308d109655fa190fc7b0862ee93

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-21T17:41:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2010-04-21 zzz
+    * EepGet: Don't convert a MalformedURLException into
+      an IOE so we recognize it when it's throuwn
+    * ReusableGZIPStreams:
+      - Concurrent
+      - Workaround for Apache Harmony 5.0M13 Deflater bug
+    * TrustedUpdate: Increase buf size for extraction
+
 2010-04-18 zzz
     * configclients.jsp: Start button logic for clients was inverted
     * Console: IRC links in readmes and initialNews
