--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,9 @@
+2010-04-23 zzz
+    * Plugins: Cleanups
+
 2010-04-21 zzz
     * EepGet: Don't convert a MalformedURLException into
-      an IOE so we recognize it when it's throuwn
+      an IOE so we recognize it when it's thrown
     * ReusableGZIPStreams:
       - Concurrent
       - Workaround for Apache Harmony 5.0M13 Deflater bug
