peers.jsp: cleanup and tag
Monotone-Parent: eaf0affc2cc491e6c02260cf74daa5c9f9705552
Monotone-Revision: d2cee81c21c386e6cca1372059504a90c306088f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-27T12:55:37
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-04-27 zzz
+    * i2psnark: Serve downloaded files from the servlet rather
+      than with a file: link
+    * Jetty: Backport directory listing bugfix from jetty 6
+    * peers.jsp: Cleanup and tag
+
 * 2010-04-27  0.7.13 released
 
 2010-04-23 zzz
