Fix plugin version check bug
Monotone-Parent: 3e654cc216455965b21f6c60a27d68e74474e50a
Monotone-Revision: 77299d7d613df0c3d1308d1056facc243ef693bb

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-02T12:19:17
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2010-05-02 zzz
+    * ByteCache:
+      - Add a per-cache stat
+      - Limit each cache based on max memory
+      - Disable in UDP MessageReceiver
+      - Add clearAll() method to be called when under
+        severe memory pressure; call from Router
+    * Plugins: Fix version checker bug
+
 2010-04-27 zzz
     * i2psnark: Serve downloaded files from the servlet rather
       than with a file: link
