PluginStarter: If there is some delay, there may be a really good reason for it.     Loading a class would be one of them!     So we do a quick check first, If it bombs out, we delay and try again.     If it bombs after that, then we throw the ClassNotFoundException.
Monotone-Parent: bf84565800be333e4e4d03782e6b3c3c1b12e725
Monotone-Revision: 8685199e9f27f6f463b3fdc95852e402011e4b2b

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-05-10T07:27:34
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-05-10 sponge
+     * PluginStarter: If there is some delay, there may be a really good reason for it.
+       Loading a class would be one of them!
+       So we do a quick check first, If it bombs out, we delay and try again.
+       If it bombs after that, then we throw the ClassNotFoundException.
+
 2010-05-05 zzz
     * build.xml: Create packed sud in release
     * Console:
