Try to prevent ZipErrors after plugin update
Monotone-Parent: a2d6654c1667e4ea22de6f1d3ffddda10f2ac0cb
Monotone-Revision: 6a03eb33282825502cddf1940dcf1d08b9481a02

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-13T17:04:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-05-13 zzz
+    * netdb.jsp debug tweaks
+    * Plugins: Try to prevent ZipErrors after upgrade
+
 2010-05-10 zzz
     * Console:
       - Summary bar tweaks
