translate log priorities
Monotone-Parent: cb83ad7ed481835c85e9307879e46d0fa8d8c957
Monotone-Revision: 21cd344fb18be33fb30ba79bb6c13eb9e464cd40

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-15T15:42:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2010-05-15 zzz
+    * Console:
+      - Tag text in graphs
+      - Move SummaryRenderer to its own file
+    * Eepsite: Set no-cache in redirecting page
+    * Hash: Move caching XOR methods only used by KBucket
+      into netdb
+    * i2psnark: CSS tweaks
+    * Log: Translate priority
+
 2010-05-13 zzz
     * netdb.jsp debug tweaks
     * Plugins: Try to prevent ZipErrors after upgrade
