--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-05-19 zzz
+    * Data: Remove lots of unnecessary initializers
+    * susidns: More validataion when adding entry
+
 2010-05-15 zzz
     * Console:
       - Tag text in graphs
