--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-05-21 zzz
+    * i2psnark:
+      - Spiff up dir listings
+      - Urlify some messages
+      - Only go into end game at the end
+
 2010-05-19 zzz
     * Data: Remove lots of unnecessary initializers
     * susidns: More validataion when adding entry
