--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-05-23 welterde
+    * core:
+      - fixed major security hole in DatagramDissector
+
 2010-05-21 zzz
     * i2psnark:
       - Spiff up dir listings
