* i2psnark: Listing fixes and cleanups; icons on front page; tweak bw choker again
Monotone-Parent: 74684497fae93f68610830b693301a50a7320cc3
Monotone-Revision: 8bdc2feca7e203a153c833d0cb61b1c431f9972f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-26T14:28:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-05-26 zzz
+    * i2psnark: Listing fixes and cleanups;
+      icons on front page; tweak bw choker again
+
 2010-05-24 zzz
     * i2psnark: Listing icons and cleanups
 
@@ -5,7 +9,6 @@
     * core:
       - fixed major security hole in DatagramDissector
     * I2PTunnelServer: Implemented WEBIRC support in IRC server tunnel
-
 
 2010-05-23 zzz
     * i2psnark:
