* Translate: Add GNU ngettext (plurals) support
Monotone-Parent: 8bdc2feca7e203a153c833d0cb61b1c431f9972f
Monotone-Revision: 9f2ad626584f5a200e0fbf138414246b5120c79d

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-27T00:38:32
Monotone-Branch: i2p.i2p

--- a/apps/i2psnark/locale/messages_zh.po
+++ b/apps/i2psnark/locale/messages_zh.po
@@ -16,6 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Chinese\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 #: ../java/src/org/klomp/snark/SnarkManager.java:84
 #, java-format
