* Installer: Disable pack200 in updater again, doesn't work       on Java 1.5     * Remove jetty from updater - it's been in for a few       releases, and i2psnark now has its own listHTML method
Monotone-Parent: 333aa5b1e3f299561c3e1be2ca664543d89fe56d
Monotone-Revision: 4f0cf6616dff638dc9cbf00f356cdd74e91f6891

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-01T14:01:21
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2010-06-01 zzz
+    * i2psnark:
+      - More listing fixes
+      - Revert choker change
+    * Installer: Disable pack200 in updater again, doesn't work
+      on Java 1.5
+    * Remove jetty from updater - it's been in for a few
+      releases, and i2psnark now has its own listHTML method
+
 2010-05-27 zzz
     * Translate: Add GNU ngettext (plurals) support
 
