* i2psnark:       - More listing fixes (more thanks to 'backup')       - Start end game a little sooner
Monotone-Parent: 98cdd835cf4fed58f2a9f715ae7e9bf8a97a9e4d
Monotone-Revision: 3c7ddf874e9f333ed210f99795d0f35f2742eb48

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-01T22:19:10
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -2,6 +2,7 @@
     * i2psnark:
       - More listing fixes
       - Revert choker change
+      - Start end game a little sooner
     * Installer: Disable pack200 in updater again, doesn't work
       on Java 1.5
     * Remove jetty from updater - it's been in for a few
