* Update: Fix multiple updates after manually       starting update - caused by refreshing summary bar       (thx 'backup'!)
Monotone-Parent: b449c81c615be9d37b6135a36dab6ce0c669a417
Monotone-Revision: 4002ce96746459cd6ab6f91f16795bdbe3165644

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-03T16:53:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-06-03 zzz
+    * NewsFetcher: Delay a minimum amount at startup
+    * Update: Fix multiple updates after manually
+      starting update - caused by refreshing summary bar
+      (thx 'backup'!)
+
 2010-06-02 zzz
     * graphs.jsp: Tag some more
     * Translation: Set xgettext add-comments option
