* Netdb:       - Use new receivedAsReply flag in LeaseSet to mark         those received as response to a query       - Mark which methods in FloodfillPeerSelector may return         our own hash       - Redefine selectNearest() so it may return our own hash,         so it can be used for closeness measurement       - Redefine findNearestRouters() to return Hashes         instead of RouterInfos       - Fix LeaseSet response decisions for floodfills, based         on partial keyspace and closeness measurements       - List only count of published leasesets in netdb
Monotone-Parent: b53734c8e96f4c80a956a0fa7748d36b77b0885a
Monotone-Revision: 45d9fab2e437a2acf99febfab1c50b28c342c694

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-05T01:10:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,17 @@
+2010-06-05 zzz
+    * Netdb:
+      - Use new receivedAsReply flag in LeaseSet to mark
+        those received as response to a query
+      - Mark which methods in FloodfillPeerSelector may return
+        our own hash
+      - Redefine selectNearest() so it may return our own hash,
+        so it can be used for closeness measurement
+      - Redefine findNearestRouters() to return Hashes
+        instead of RouterInfos
+      - Fix LeaseSet response decisions for floodfills, based
+        on partial keyspace and closeness measurements
+      - List only count of published leasesets in netdb
+
 2010-06-03 zzz
     * NewsFetcher: Delay a minimum amount at startup
     * Update: Fix multiple updates after manually
