--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2010-06-07  0.7.14 released
+
+2010-06-07 zzz
+    * Misc tweaks after code review
+
 2010-06-05 zzz
     * Netdb:
       - Use new receivedAsReply flag in LeaseSet to mark
