--- a/apps/susidns/locale/messages_de.po
+++ b/apps/susidns/locale/messages_de.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the susidns package.
 # To contribute translations, see http://www.i2p2.de/newdevelopers
 # foo <foo@bar>, 2009.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: I2P susidns\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-10 01:53+0000\n"
-"PO-Revision-Date: 2009-10-19 12:50+0000\n"
-"Last-Translator: foo <foo@bar>\n"
+"PO-Revision-Date: 2010-06-13 13:52+0100\n"
+"Last-Translator: echelon <echelon@i2pmail.org>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,4 +19,5 @@ msgstr ""
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:88
 msgid "Introduction - SusiDNS"
-msgstr ""
+msgstr "Einweisung - SUsiDNS"
+
