UDP fix and comments
Monotone-Parent: 13420d65cc1fe35cefd28e256e1bec31227cee93
Monotone-Revision: 546995754f4218a8880e0b3d476179087ca08f55

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-13T16:42:24
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2010-06-13 zzz
+    * Console: Add some divs for languages to news and readmes
+    * HTTP Proxy: Pass different User Agent to outproxy
+    * i2psnark:
+      - Move config to separate page
+      - Icon tweaks
+    * Translation: zh fix
+
 2010-06-12 welterde
     * fixed possible race-condition and improved code style in ObjectCounter utility class
 
